Working on the date time setting

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,12 +30,12 @@
       </fieldset>
       <fieldset>
         <label class="match-label state">State
-          <input class="state" type="text" name="state" value="<%= @user.state %>"/>
+          <input id="state" type="text" name="state" value="<%= @user.state %>"/>
         </label>
       </fieldset>
       <fieldset>
         <label class="match-label state">Zipcode
-          <input class="zipcode" type="text" name="zipcode" value="<%= @user.zipcode %>"/>
+          <input id="zipcode" type="text" name="zipcode" value="<%= @user.zipcode %>"/>
         </label>
       </fieldset>
     </div>
