Date - creating and editing matches now work

--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -32,10 +32,8 @@
         </label>
       </fieldset>
       <fieldset>
-        <label class="match-label new-date-and-time">Match Date and Time
-          <input id="new-date" type="date" rows="4" disabled="true" name="new-date" value=""/>
-          <input id="new-time" type="time" rows="4" disabled="true" name="new-time" value=""/>
-        </label>
+        <label class="match-label new-date-and-time">Date</label>
+        <input id="new_match_datetime" type="text" name="datetime" placeholder="Please enter a date"/>
       </fieldset>
     </div>
   </div>
