--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -33,7 +33,7 @@
     </fieldset>
     <fieldset>
       <label class="match-label datetime">Date</label>
-      <input id="match_datetime" type="text" name="datetime" value="<%= @match.match_datetime ? @match.match_datetime.strftime('%Y-%m-%d %h:%M') : '' %>" placeholder="Please enter a date"/>
+      <input id="match_datetime" type="text" name="datetime" value="<%= @match.match_datetime ? @match.match_datetime.strftime('%Y-%m-%d %H:%M') : '' %>" placeholder="Please enter a date"/>
     </fieldset>
   </div>
   <div class="cell medium-offset-2 medium-5">
