Working on adding lessons and some analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
           <li class="menu-text">GamePlans</li>
           <li id="matches-menu-item"><a href="/home/index">Matches</a></li>
           <li id="new-match-menu-item"><a href="/matches/new">Add a New Match</a></li>
-          <li id="my-profile-menu-item"><a href="/users/<%= current_user.id %>">My Profile</a></li>
+          <li id="lessons-menu-item"><a href="/lessons/index">Matches</a></li>
+          <li id="new-lesson-menu-item"><a href="/lessons/new">Add a New Match</a></li>
           <li id="analytics-menu-item"><a href="/analytics">Analytics</a></li>
+          <li id="my-profile-menu-item"><a href="/users/<%= current_user.id %>">My Profile</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
