--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -12,13 +12,13 @@
         <input id="new-lesson_date" type="text" name="lesson_date" value="<%= @lesson.lesson_date ? @lesson.lesson_date.strftime('%Y-%m-%d %H:%M') : '' %>" placeholder="Please enter a date"/>
       </fieldset>
       <fieldset>
-        <label class="lesson-label notes">Notes
-          <input id="new-lesson_notes" type="text" name="notes" value="<%= @lesson.notes ? @lesson.notes : ""%>"/>
+        <label class="lesson-label notes">Player Notes
+          <textarea id="new-lesson_notes" name="notes" value="<%= @lesson.notes ? @lesson.notes : ""%>" rows="4"></textarea>
         </label>
       </fieldset>
       <fieldset>
         <label class="lesson-label coaches_note">Coaches Notes
-          <input id="new-lesson_coaches_note" type="text" name="coaches_note" value="<%= @lesson.coaches_note ? @lesson.coaches_note : ""%>"/>
+          <textarea id="new-lesson_coaches_note" name="coaches_note" disabled="true" value="<%= @lesson.coaches_note ? @lesson.coaches_note : ""%>" rows="4"></textarea>
         </label>
       </fieldset>
     </div>
