--- a/app/views/matches/note_to_self.html.erb
+++ b/app/views/matches/note_to_self.html.erb
@@ -1,12 +1,12 @@
 <form class="grid-x grid-margin-x">
-  <div class="cell medium-offset-2 medium-5">
+  <div class="cell medium-12">
     <div>
       <label name="note-to-self">Notes to self</label>
-      <textarea id="note-to-self" rows="10"><%= @note_to_self %></textarea>
+      <textarea id="note-to-self" rows="4"><%= @note_to_self %></textarea>
     </div>
-    <div class="cell medium-offset-2 medium-5">
-      <button class="button cell medium-offset-1 medium-4 success update-note-to-self" id="<%= @match.id%>" value="submit">Save</button>
-      <button class="button cell medium-offset-1 medium-4 cancel cancel-update" id="<%= @match.id%>" value="submit">Cancel</button>
+    <div>
+      <button class="button cell success update-note-to-self" id="<%= @match.id%>" value="submit">Save</button>
+      <button class="button cell cancel cancel-update" id="<%= @match.id%>" value="submit">Cancel</button>
     </div>
   </div>
 </form>
