--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,4 +1,4 @@
-<form>
+<form autocomplete="off">
 <div class="grid-x grid-margin-x">
   <div class="cell small-offset-1 small-10 match-details" id="<%= @match.id %>">
     <fieldset>
