--- a/app/views/matches/strengths.html.erb
+++ b/app/views/matches/strengths.html.erb
@@ -1,4 +1,4 @@
-<form class="grid-x grid-margin-x">
+<form class="grid-x grid-margin-x" autocomplete="off">
   <div class="cell medium-offset-2 medium-5">
     <div>
     <select class="edit-strengths" multiple size="10" heigth="100px">
