--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,4 +1,4 @@
-<form>
+<form autocomplete="off">
   <div class="grid-x grid-margin-x">
     <div class="cell small-offset-1 small-10 match-details" id="<%= @match.id %>">
       <fieldset>
@@ -28,7 +28,7 @@
       </fieldset>
       <fieldset>
         <label class="match-label new-note-to-self">Notes to Self
-          <textarea id="new-note-to-self" type="textarea" rows="4" name="new-note-to-self"></textarea>
+          <textarea autocomplete="off" id="new-note-to-self" type="textarea" rows="4" name="new-note-to-self"></textarea>
         </label>
       </fieldset>
       <fieldset>
