--- a/app/views/matches/note_to_self.html.erb
+++ b/app/views/matches/note_to_self.html.erb
@@ -1,8 +1,8 @@
-<form class="grid-x grid-margin-x">
+<form class="grid-x grid-margin-x" autocomplete="off">
   <div class="cell medium-12">
     <div>
       <label name="note-to-self">Notes to self</label>
-      <textarea id="note-to-self" rows="4"><%= @note_to_self %></textarea>
+      <textarea autocomplete="off" id="note-to-self" rows="4"><%= @note_to_self %></textarea>
     </div>
     <div>
       <button class="button cell success update-note-to-self" id="<%= @match.id%>" value="submit">Save</button>
