--- a/app/views/matches/result.html.erb
+++ b/app/views/matches/result.html.erb
@@ -1,4 +1,4 @@
-<form>
+<form autocomplete="off">
   <button class="close-button" data-close aria-label="Close modal" type="button">
     <span aria-hidden="true">&times;</span>
   </button>
