--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,8 @@
       </fieldset>
       <fieldset>
         <label class="match-label club">Club
-          <input id="club-id" type="hidden" name="club-id" value="<%= @user.club_id ? @user.club_id : ''%>"/>
-          <input autocomplete="off" id="club" type="text" name="club" value="<%= @user.club_id ? @user.club.name : ''%>"/>
+          <input id="club-id" type="hidden" name="club-id" value="<%= @user.club_id.to_s != '' ? @user.club_id : ''%>"/>
+          <input autocomplete="off" id="club" type="text" name="club" value="<%= @user.club_id.to_s != '' ? @user.club.name : ''%>"/>
         </label>
       </fieldset>
       <fieldset>
