Trying asset url

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,7 @@
 
 
 .background {
-  background-image: url('doubles_background.png');
+  background-image: asset_url('doubles_background.png');
   background-size: 1400px;
 }
 
