--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
       <div class="top-bar-left">
         <ul class="menu" data-dropdown-menu>
           <li class="menu-text">GamePlans</li>
-          <li id="matches-menu-item"><a href="/home/index">Matches</a></li>
+          <li id="noticeboard-menu-item"><a href="/noticeboard">Noticeboard</a></li>
+          <li id="matches-menu-item"><a href="/matches">Matches</a></li>
           <li id="new-match-menu-item"><a href="/matches/new">Add a New Match</a></li>
           <li id="lessons-menu-item"><a href="/lessons">Lessons</a></li>
           <li id="new-lesson-menu-item"><a href="/lessons/new">Add a New Lesson</a></li>
