--- a/app/views/noticeboard/index.html.erb
+++ b/app/views/noticeboard/index.html.erb
@@ -4,6 +4,7 @@
       <% if @upcoming_lesson %>
           <div class="callout">
             <h5>Upcoming Lesson Alert</h5>
+            <span><img style="height: 20px" src='/images/icons8-planner.png'/></span>
             <p style="padding-left: 2em">
         You have a LESSON with <%= @upcoming_lesson.coach.name %> scheduled for <%= @upcoming_lesson.lesson_date %>
             </p>
@@ -11,6 +12,7 @@
       <% end %>
       <% if @upcoming_match %>
           <div class="callout">
+            <span><img style="height: 20px" src='/images/icons8-planner.png'/></span>
             <h5>Upcoming Match Alert</h5>
           <p style="padding-left: 2em">
         You have a MATCH with <%= @upcoming_match.opponent.name %> scheduled for <%= @upcoming_match.match_datetime %>
@@ -27,14 +29,20 @@
                   <a href="/matches/<%= item.id%>">View</a>
                 </td>
                 <td>
-                You had a Match against <%= item.opponent.name %> on <%= item.match_datetime %> - <%= item.result.win ? "WIN" : "LOSS" %> (<%= item.result.show_sets %>)
+                  <% if item.result.win %>
+                    <span><img style="height: 20px" src='/images/icons8-lol.png'/></span>
+                  <% else %>
+                    <span><img style="height: 20px" src='/images/icons8-cloud_lighting.png'/></span>
+                  <% end %>
+                You had a Match against <%= item.opponent.name %> on <%= item.match_datetime.strftime("%b/%-d/%Y at %l:%M %p") %> - <%= item.result.show_sets == "" ? "No Result" : item.result.win ? "WIN " : "LOSS " %> <%= item.result.show_sets == "" ? "" : "(#{item.result.show_sets})" %>
                 </td>
               <% elsif  item.try(:lesson_date) %>
                 <td>
                 <a href="/lessons/<%= item.id%>">View</a>
                 </td>
                 <td>
-                You had a Lesson with <%= item.coach.name %> on <%= item.lesson_date %>
+                  <span><img style="height: 20px" src='/images/icons8-curriculum.png'/></span>
+                You had a Lesson with <%= item.coach.name %> on <%= item.lesson_date.strftime("%b/%-d/%Y at %l:%M %p") %>
                 </td>
               <% end %>
             </tr>
@@ -44,3 +52,9 @@
     </div>
   </div>
 </div>
+<script>
+    $(function() {
+        $(".is-active").removeClass('is-active')
+        $("#noticeboard-menu-item").addClass('is-active')
+    })
+</script>
