Parsing search results

--- a/app/views/matches/search_opponents.html.erb
+++ b/app/views/matches/search_opponents.html.erb
@@ -3,7 +3,7 @@ s  <% if @search_results.count == 0 %>
     <option value="<%= -1 %>" disabled="true">No Results</option>
   <% else %>
     <% @search_results.each do |opponent| %>
-      <option value="<%= opponent[0] %>" <%= @selected_id == opponent[0] ? "selected" : ""%>><%= opponent[1]%></option>
+      <option value="<%= opponent[0] %>" <%= @selected_id == opponent[0] ? "selected" : ""%>><%= opponent[1]%>, <%= opponent[2]%>, <%= opponent[3]%></option>
     <% end %>
   <% end %>
 </select>
