small styling fix to results box

--- a/app/views/matches/opponents.html.erb
+++ b/app/views/matches/opponents.html.erb
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="grid-x">
-      <div class="search-results cell medium-12" style="height:10px">
+      <div class="search-results cell medium-offset-1 medium-10" style="height:10px">
 
       </div>
     </div>
