Hide analytics for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <li id="new-match-menu-item"><a href="/matches/new">Add a New Match</a></li>
           <li id="lessons-menu-item"><a href="/lessons">Lessons</a></li>
           <li id="new-lesson-menu-item"><a href="/lessons/new">Add a New Lesson</a></li>
-          <li id="analytics-menu-item"><a href="/analytics">Analytics</a></li>
+          <!--<li id="analytics-menu-item"><a href="/analytics">Analytics</a></li>-->
           <li id="my-profile-menu-item"><a href="/users/<%= current_user.id %>">My Profile</a></li>
         </ul>
       </div>
