--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -3,7 +3,7 @@
     <div class="cell small-offset-1 small-10 lesson-details" id="<%= @lesson.id %>">
       <fieldset>
         <label class="lesson-label coach">Coach
-          <input class="lesson_coach" type="text" name="coach" value="<%= @lesson.coach ? lesson.coach.name : "" %>" id="<%= @lesson.coach_id %>"
+          <input class="lesson_coach" type="text" name="coach" value="<%= @lesson.coach ? @lesson.coach.name : "" %>" id="<%= @lesson.coach_id %>"
           />
         </label>
       </fieldset>
@@ -28,6 +28,13 @@
   </div>
 </form>
 <div id="form-modal" class="reveal medium" data-reveal style="display: none"></div>
+<div id="searchingModal" class="reveal-modal" data-reveal aria-hidden="true" role="dialog">
+  <div class="grid-x grid-margin-x">
+    <div class="cell medium-offset-2 medium-5">
+      <h2 class="align-center text-center" id="modalTitle" style="color: white">Searching <img style="height: 30px;" src="/images/spinner.gif"></h2>
+    </div>
+  </div>
+</div>
 <script>
     $(function() {
         $(".is-active").removeClass('is-active')
