Adding league, season and team now works

--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -22,28 +22,28 @@
         </label>
       </div>
       <div class="cell small-offset-1 small-2 match-details">
-        <label class="new-year match-label">Year
-          <input id="new-year" type="text"name="new-year"/>
+        <label class="new-season match-label">Season/Year
+          <input id="new-season" type="text"name="new-season"/>
         </label>
       </div>
-      <div class="cell small-offset-1 small-4 match-details" id="<%= @match.id %>">
+      <div class="cell small-offset-1 small-4 match-details">
         <label class="match-label new-results">Result
           <input id="new-results" type="text" name="new-results"/>
         </label>
       </div>
-      <div class="cell small-offset-1 small-5 match-details" id="<%= @match.id %>">
+      <div class="cell small-offset-1 small-5 match-details">
         <label class="match-label new-location">Location
           <input id="new-location" type="text" name="new-location" value=""/>
         </label>
       </div>
-      <div class="cell small-offset-1 small-10 match-details" id="<%= @match.id %>">
+      <div class="cell small-offset-1 small-10 match-details">
         <label class="match-label new-strengths">Strengths
           <input id="new-strengths" type="text" name="new-strengths"/>
         </label>
         <label class="match-label new-weaknesses">Weaknesses
           <input id="new-weaknesses" type="text" name="new-weaknesses"/>
         </label>
-        <label class="match-label new-note-to-self">Notes to Self
+        <label class="match-label new-note-to-self">Pre Match Notes
           <textarea autocomplete="off" id="new-note-to-self" type="textarea" rows="4" name="new-note-to-self"></textarea>
         </label>
       </div>
